k3s/pippaothy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pippaothy
  labels:
    app: pippaothy 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pippaothy
  template:
    metadata:
      labels:
        app: pippaothy
    spec:
      containers:
      - name: pippaothy
        image: julianone/pippaothy:latest 
        ports:
        - containerPort: 8080  
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: pippaothy 
spec:
  selector:
    app: pippaothy 
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 80 # External port
      targetPort: 8080 # Container port
