k3s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citadel-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jroberts.info
        - api.jroberts.info
      secretName: jroberts-tls
  rules:
    - host: jroberts.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shire
                port:
                  number: 80
    - host: api.jroberts.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: citadel
                port:
                  number: 80
